--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.5",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
     "live-server": "^1.2.1",
@@ -43,5 +44,6 @@
   "devDependencies": {
     "nodemon": "^1.18.9",
     "webpack-cli": "^3.3.0"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
