--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "serve": "live-server public/",
     "build": "webpack",
     "dev-server": "webpack-dev-server",
-    "start": "node server.js",
-    "server": "nodemon server.js"
+    "api-start": "node src/apiServer/server.js",
+    "dev": "npm-run-all --parallel dev:*",
+    "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
+    "dev:build-server": "webpack --config webpack.server.js --watch",
+    "dev:build-client": "webpack --config webpack.client.js --watch"
   },
   "author": "",
   "license": "ISC",
@@ -21,28 +24,42 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.5",
     "body-parser": "^1.18.3",
+    "compression": "1.7.4",
+    "concurrently": "4.1.0",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
+    "express-http-proxy": "1.5.1",
+    "less": "^3.9.0",
     "live-server": "^1.2.1",
+    "lodash": "4.17.11",
     "mongodb": "^3.2.2",
     "mongoose": "^5.4.21",
     "node-sass": "^4.11.0",
+    "nodemon": "1.18.11",
     "normalize.css": "^8.0.1",
+    "npm-run-all": "4.1.5",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "5.2.0",
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.1",
+    "react-router-config": "5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
+    "serialize-javascript": "1.7.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "4.2.1",
+    "webpack-node-externals": "1.7.2"
   },
   "devDependencies": {
+    "babel-plugin-css-modules-transform": "^1.6.2",
+    "mini-css-extract-plugin": "^0.6.0",
     "nodemon": "^1.18.9",
     "webpack-cli": "^3.3.0"
   },
