--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
     "express-http-proxy": "1.5.1",
+    "file-loader": "^3.0.1",
     "less": "^3.9.0",
     "live-server": "^1.2.1",
     "lodash": "4.17.11",
@@ -46,6 +47,7 @@
     "sass-loader": "^7.1.0",
     "serialize-javascript": "1.7.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.31.0",
     "webpack-dev-server": "^3.3.1",
     "webpack-merge": "4.2.1",
