--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.4.4",
+    "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "babel-cli": "^6.26.0",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "compression": "1.7.4",
     "concurrently": "4.1.0",
     "css-loader": "^2.1.1",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "express-http-proxy": "1.5.1",
     "file-loader": "^3.0.1",
     "less": "^3.9.0",
     "live-server": "^1.2.1",
     "lodash": "4.17.11",
-    "mongodb": "^3.2.4",
-    "mongoose": "^5.5.7",
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.6.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "npm-run-all": "4.1.5",
@@ -39,17 +39,17 @@
     "react-dom": "^16.8.6",
     "react-helmet": "5.2.1",
     "react-modal": "^3.8.1",
-    "react-redux": "^7.0.3",
+    "react-redux": "^7.1.0",
     "react-router-config": "5.0.0",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "serialize-javascript": "1.7.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.31.0",
-    "webpack-dev-server": "^3.3.1",
+    "webpack": "^4.34.0",
+    "webpack-dev-server": "^3.7.1",
     "webpack-merge": "4.2.1",
     "webpack-node-externals": "1.7.2"
   },
@@ -57,6 +57,7 @@
     "babel-plugin-css-modules-transform": "^1.6.2",
     "mini-css-extract-plugin": "^0.6.0",
     "nodemon": "^1.19.0",
-    "webpack-cli": "^3.3.2"
+    "postcss": "^7.0.17",
+    "webpack-cli": "^3.3.4"
   }
 }
