--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all --parallel dev:*",
+    "dev": "npm-run-all --parallel dev:*",
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
     "dev:build-server": "webpack --config webpack.server.js --watch",
-    "dev:build-client": "webpack --config webpack.client.js --watch"
+    "dev:build-client": "webpack --config webpack.client.js --watch",
+    "start": "npm-run-all --parallel start:*",
+    "start:server": "node build/bundle.js",
+    "start:build-server": "webpack --config webpack.server.js",
+    "start:build-client": "webpack --config webpack.client.js"
   },
   "author": "",
   "license": "ISC",
