--- a/package.json
+++ b/package.json
@@ -57,9 +57,7 @@
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "4.2.1",
-    "webpack-node-externals": "1.7.2"
-  },
-  "devDependencies": {
+    "webpack-node-externals": "1.7.2",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "mini-css-extract-plugin": "^0.6.0",
     "postcss": "^7.0.17" 
