--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:build-server": "webpack --config webpack.server.js --watch",
     "dev:build-client": "webpack --config webpack.client.js --watch",
     "start": "npm-run-all --parallel start:*",
-    "start:server": "nodemon --watch build --exec \"node build/bundle.js\"",
+    "start:server": "nodemon --watch build --exec \"node build/bundle.js --prod\"",
     "start:build-server": "webpack --config webpack.server.js",
     "start:build-client": "webpack --config webpack.client.js"
   },
