--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "dev": "npm-run-all --parallel dev:*",
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
     "dev:build-server": "webpack --config webpack.server.js --watch",
-    "dev:build-client": "webpack --config webpack.client.js --watch",
-    "start": "npm-run-all --parallel start:*",
-    "start:server": "nodemon --watch build --exec \"node build/bundle.js --prod\"",
-    "start:build-server": "webpack --config webpack.server.js",
-    "start:build-client": "webpack --config webpack.client.js"
+    "dev:build-client": "webpack --config webpack.client.js --watch"
   },
   "author": "",
   "license": "ISC",
@@ -60,6 +56,6 @@
     "webpack-node-externals": "1.7.2",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "mini-css-extract-plugin": "^0.6.0",
-    "postcss": "^7.0.17" 
+    "postcss": "^7.0.17"
   }
 }
