--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "aws-sdk": "^2.488.0",
     "axios": "^0.18.1",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-css-modules-transform": "^1.6.2",
     "body-parser": "^1.19.0",
     "compression": "1.7.4",
     "concurrently": "4.1.0",
@@ -29,12 +31,14 @@
     "less": "^3.9.0",
     "live-server": "^1.2.1",
     "lodash": "4.17.11",
+    "mini-css-extract-plugin": "^0.6.0",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.0",
     "normalize.css": "^8.0.1",
     "npm-run-all": "4.1.5",
+    "postcss": "^7.0.17",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -53,9 +57,6 @@
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "4.2.1",
-    "webpack-node-externals": "1.7.2",
-    "babel-plugin-css-modules-transform": "^1.6.2",
-    "mini-css-extract-plugin": "^0.6.0",
-    "postcss": "^7.0.17"
+    "webpack-node-externals": "1.7.2"
   }
 }
