--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": " NODE_ENV=development npm-run-all --parallel dev:*",
+    "pre": " NODE_ENV=development npm-run-all --parallel dev:*",
     "start": " NODE_ENV=production npm-run-all --parallel dev:*",
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
     "dev:build-server": "webpack --config webpack.server.js --watch",
