--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "pre": "NODE_ENV=development npm-run-all --parallel dev:*",
-    "start": "NODE_ENV=production npm-run-all --parallel dev:*",
-    "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
-    "dev:build-server": "webpack --config webpack.server.js --watch",
-    "dev:build-client": "webpack --config webpack.client.js --watch"
+    "dev": "npm-run-all --parallel dev:*",
+    "dev:server": "API_URL=localhost:3001 SSR_URL=localhost:3000 nodemon --watch build --exec \"node build/bundle.js\"",
+    "dev:build-server": "webpack --config webpack.server.dev.js --watch",
+    "dev:build-client": "webpack --config webpack.client.dev.js --watch",
+    "start": " npm-run-all --parallel prod:*",
+    "prod:server": " API_URL=salty-thicket-36195.herokuapp.com SSR_URL=goatrelic.herokuapp.com nodemon --watch build --exec \"node build/bundle.js\"",
+    "prod:build-server": "webpack --config webpack.server.prod.js --watch",
+    "prod:build-client": "webpack --config webpack.client.prod.js --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/core": "^7.5.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
-    "aws-sdk": "^2.488.0",
+    "aws-sdk": "^2.490.0",
     "axios": "^0.18.1",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.6",
@@ -26,15 +29,17 @@
     "compression": "1.7.4",
     "concurrently": "4.1.0",
     "css-loader": "^2.1.1",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-http-proxy": "1.5.1",
     "file-loader": "^3.0.1",
+    "fs": "0.0.1-security",
     "less": "^3.9.0",
     "live-server": "^1.2.1",
     "lodash": "4.17.11",
     "mini-css-extract-plugin": "^0.6.0",
     "mongodb": "^3.2.7",
-    "mongoose": "^5.6.0",
+    "mongoose": "^5.6.4",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.0",
     "normalize.css": "^8.0.1",
@@ -48,13 +53,13 @@
     "react-redux": "^7.1.0",
     "react-router-config": "5.0.0",
     "react-router-dom": "^5.0.1",
-    "redux": "^4.0.1",
+    "redux": "^4.0.3",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "serialize-javascript": "1.7.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.34.0",
+    "webpack": "^4.35.3",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "4.2.1",
