--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dev:build-server": "webpack --config webpack.server.dev.js --watch",
     "dev:build-client": "webpack --config webpack.client.dev.js --watch",
     "start": "npm-run-all --parallel prod:*",
-    "prod:server": "API_URL=salty-thicket-36195.herokuapp.com SSR_URL=goatrelic.herokuapp.com nodemon --watch build --exec \"node build/bundle.js\"",
-    "prod:build-server": "webpack --config webpack.server.prod.js --watch",
-    "prod:build-client": "webpack --config webpack.client.prod.js --watch"
+    "prod:server": "API_URL=salty-thicket-36195.herokuapp.com SSR_URL=goatrelic.herokuapp.com node build --exec \"node build/bundle.js\"",
+    "prod:build-server": "webpack --config webpack.server.prod.js",
+    "prod:build-client": "webpack --config webpack.client.prod.js"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +30,7 @@
     "concurrently": "4.1.0",
     "css-loader": "^2.1.1",
     "dotenv": "^8.0.0",
+    "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "express-http-proxy": "1.5.1",
     "file-loader": "^3.0.1",
