--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "express-http-proxy": "1.5.1",
+    "file-loader": "^4.0.0",
     "less": "^3.9.0",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.6.0",
