--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.6.1",
     "aws-sdk": "^2.490.0",
     "axios": "^0.18.1",
     "babel-cli": "^6.26.0",
@@ -43,6 +44,7 @@
     "normalize.css": "^8.0.1",
     "npm-run-all": "4.1.5",
     "postcss": "^7.0.17",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
